--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,10 @@
         "**/Makefile": true
     },
     "C_Cpp.default.cppStandard": "c++20",
-    "C_Cpp.default.cStandard": "c17"
+    "C_Cpp.default.cStandard": "c17",
+    "files.associations": {
+        "bitset": "cpp",
+        "cstdlib": "cpp",
+        "mutex": "cpp"
+    }
 }
